--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -82,17 +82,17 @@ This requires three entries: one each for the entitlement certificate, the entit
 
 . Click btn:[Create Stored Key/Cert] and set these parameters for the entitlement certificate:
 * In the [guimenu]``Description`` field, type [systemitem]``Entitlement-Cert-date``.
-* In the [guimenu]``Type`` field, select [systemitem]``SSL``
+* In the [guimenu]``Type`` field, select [systemitem]``SSL``.
 * In the [guimenu]``Select file to upload`` field, browse to the location where you saved the entitlement certificate, and select the [path]``.pem`` certificate file.
 . Click btn:[Create Key].
 . Click btn:[Create Stored Key/Cert] and set these parameters for the entitlement key:
 * In the [guimenu]``Description`` field, type [systemitem]``Entitlement-key-date``.
-* In the [guimenu]``Type`` field, select [systemitem]``SSL``
+* In the [guimenu]``Type`` field, select [systemitem]``SSL``.
 * In the [guimenu]``Select file to upload`` field, browse to the location where you saved the entitlement key, and select the [path]``.pem`` key file.
 . Click btn:[Create Key].
 . Click btn:[Create Stored Key/Cert] and set these parameters for the {redhat} certificate:
 * In the [guimenu]``Description`` field, type [systemitem]``redhat-uep``.
-* In the [guimenu]``Type`` field, select [systemitem]``SSL``
+* In the [guimenu]``Type`` field, select [systemitem]``SSL``.
 * In the [guimenu]``Select file to upload`` field, browse to the location where you saved the {redhat} certificate, and select the certificate file.
 . Click btn:[Create Key].
 
@@ -129,7 +129,7 @@ For example, [systemitem]``https://cdn.redhat.com/content/dist/rhel/server/7/7Se
 * In the [guimenu]``SSL Client Certificate`` field, select [systemitem]``Entitlement-Cert-date``.
 * In the [guimenu]``SSL Client Key`` field, select [systemitem]``Entitlement-Key-date``.
 * Leave all other fields as the default values.
-. Click btn:[Create Repository]
+. Click btn:[Create Repository].
 . Repeat for every repository you want to define.
 
 
@@ -238,7 +238,7 @@ ifeval::[{uyuni-content} == true]
 For example, [systemitem]``https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable:/CentOS7-Uyuni-Client-Tools/CentOS_7/``.
 * In the [guimenu]``Has Signed Metadata?`` field, uncheck all Red Hat Enterprise Repositories.
 * Leave all other fields as the default values.
-. Click btn:[Create Repository]
+. Click btn:[Create Repository].
 . Navigate to menu:Software[Manage > Channels].
 . Click btn:[Create Channel] and set these parameters.
 Ensure you use the correct {rhela} version:
