--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -6,6 +6,12 @@ This section contains information about registering Salt clients running {ubuntu
 {susemgr} supports {ubuntu} 16.04 LTS and 18.04 LTS Clients using Salt.
 Traditional clients are not supported.
 
+[IMPORTANT]
+====
+Canonical does not endorse or support {susemgr}.
+====
+
+
 Supported features:
 
 * Bootstrapping
@@ -31,126 +37,135 @@ Some actions are not yet supported:
 // Reason: RMT and SMT cannot mirror Debian repositories (yet) and so cannot create it in that directory the correct files.
 // We are waiting for SMT to release the feature/fix to mirror Debian repositories. When this has been done, this comment and the limitation above can be removed.
 
-[NOTE]
-====
-Canonical does not endorse or support {susemgr}.
-====
 
-== Prepare to Register {ubuntu} Clients
+
+== Prepare to Register
 
 Some preparation is required before you can register {ubuntu} clients to the {productname} Server.
 
-// ifndef works for displaying content when building uyuni
-// ifdef does not show the content for uyuni
-// ifeval works for displaying content
 
-.Procedure: Adding the {ubuntu} Channels
+//ifeval::[{suma-content} == true]
 
-// SUSE Manager content
-ifeval::[{suma-content} == true]
 Before you begin, ensure you have the {ubuntu} product enabled, and have synchronized the {ubuntu} channels for {scc}:
 
-{ubuntu} 16.04::
-* "Ubuntu 16.04" and "SUSE Linux Enterprise Client Tools Ubuntu 1604 amd64" at the {webui}, or [systemitem]``ubuntu-16.04-pool-amd64`` and [systemitem]``ubuntu-16.04-suse-manager-tools-amd64`` at CLI.
+For {ubuntu} 16.04:
 
-{ubuntu} 18.04::
-* "Ubuntu 18.04" and "SUSE Linux Enterprise Client Tools Ubuntu 1804 amd64" at the {webui}, or [systemitem]``ubuntu-18.04-pool-amd64`` and [systemitem]``ubuntu-18.04-suse-manager-tools-amd64`` at CLI.
+* From the {webui}, add [systemitem]``Ubuntu 16.04`` and [systemitem]``SUSE Linux Enterprise Client Tools Ubuntu 1604 amd64``.
+* From the command prompt, add [systemitem]``ubuntu-16.04-pool-amd64`` and [systemitem]``ubuntu-16.04-suse-manager-tools-amd64``.
 
-[WARNING]
+For {ubuntu} 18.04:
+
+* From the {webui}, add [systemitem]``Ubuntu 18.04`` and [systemitem]``SUSE Linux Enterprise Client Tools Ubuntu 1804 amd64``.
+* From the command prompt, add [systemitem]``ubuntu-18.04-pool-amd64`` and [systemitem]``ubuntu-18.04-suse-manager-tools-amd64``.
+
+[NOTE]
 ====
 The mandatory channels do not contain {ubuntu} upstream packages.
 The repositories and channels for synchronizing upstream content must be configured manually.
 ====
 
-. Ensure that you have the appropriate software channels available on your system.
+
+
+== Repository and Channel Management
+
 
 In the {productname} {webui}, navigate to menu:Software[Channel List > All].
-You should see a base channel and a child channel for your architecture, for example:
-+
-----
- ubuntu-18.04-pool for amd64
- |
- +- Ubuntu-18.04-SUSE-Manager-Tools for amd64
-----
-. Create custom repositories to mirror the {ubuntu} packages.
+Verify that you have a base channel and a child channel for your architecture.
+
 For example:
-+
-For `main`:
 
-* Repository Label: ubuntu-bionic-main
-* Repository URL: http://ubuntumirror.example.com/ubuntu/dists/bionic/main/binary-amd64/
-* Repository Type: deb
-+
-For `main-updates`:
+* Base channel: [systemitem]``ubuntu-18.04-pool for amd64``
+* Child channel: [systemitem]``Ubuntu-18.04-SUSE-Manager-Tools for amd64``
 
-* Repository Label: ubuntu-bionic-main-updates
-* Repository URL: http://ubuntumirror.example.com/ubuntu/dists/bionic-updates/main/binary-amd64/
-* Repository Type: deb
 
-. Create custom channels under the `pool` channel, mirroring the vendor channels.
 
-Ensure the custom channels you create have `AMD64 Debian` architecture.
-Create this structure:
-+
-----
- ubuntu-18.04-pool for amd64 (vendor channel)
- |
- +- Ubuntu-18.04-SUSE-Manager-Tools for amd64 (vendor channel)
- |
- +- ubuntu-18.04-amd64-main (custom channel)
- |
- +- ubuntu-18.04-amd64-main-updates (custom channel)
-----
+.Procedure: Creating Custom Repositories
 
-. Associate the custom channels with the appropriate custom repositories.
+. On the {productname} Server {webui}, navigate to menu:Software[Manage > Repositories].
+. Click btn:[Create Repository] and set these parameters for the ``main`` repository:
+* In the [guimenu]``Repository Label`` field, type [systemitem]``ubuntu-bionic-main``.
+* In the [guimenu]``Repository URL`` field, type [systemitem]``http://ubuntumirror.example.com/ubuntu/dists/bionic/main/binary-amd64/``.
+* In the [guimenu]``Repository Type`` field, select [systemitem]``deb``.
+* Leave all other fields as the default values.
+. Click btn:[Create Repository]
+. Click btn:[Create Repository] and set these parameters for the ``main-updates`` repository:
+* In the [guimenu]``Repository Label`` field, type [systemitem]``ubuntu-bionic-main-updates``.
+* In the [guimenu]``Repository URL`` field, type [systemitem]``http://ubuntumirror.example.com/ubuntu/dists/bionic-updates/main/binary-amd64/``.
+* In the [guimenu]``Repository Type`` field, select [systemitem]``deb``.
+* Leave all other fields as the default values.
+. Click btn:[Create Repository]
+
+
+
+When you have created the repositories, you can create the custom channels.
+
+￼Ensure the custom channels you create have `AMD64 Debian` architecture.
+
+Your custom channels should use this structure:
+
+* Parent channel: [systemitem]``ubuntu-18.04-pool for amd64``
+* Child vendor channel: [systemitem]``Ubuntu-18.04-SUSE-Manager-Tools for amd64``
+* Child custom channel: [systemitem]``ubuntu-18.04-amd64-main``
+* Child custom channel: [systemitem]``ubuntu-18.04-amd64-main-updates``
+
+When you have the channels set up, associate each channel with the appropriate repository, and synchronize then channels.
+
 endif::[]
-// End of SUSE Manager content
-// Uyuni specific instructions, in fact this works at SUSE Manager as well, but spacewalk-common-channels script is NOT supported
+
+
+
 ifeval::[{uyuni-content} == true]
-Install the spacewalk-utils package:
+
+// Uyuni specific instructions, in fact this works at SUSE Manager as well, but spacewalk-common-channels script is NOT supported
+
+.Procedure: Adding the {ubuntu} Channels
+
+. At the command prompt on the {productname} Server, as root, install the [systemitem]``spacewalk-utils`` package:
++
 ----
 sudo zypper in spacewalk-utils
 ----
-
-At the command prompt on the {productname} Server, as root, add the Ubuntu channels (change the version of the channel names to match your Ubuntu version):
-
+. Add the {ubuntu} channels.
+Adjust the version of the channel names to match your {ubuntu} version:
++
 ----
 sudo spacewalk-common-channels ubuntu-1804-pool-amd64-uyuni ubuntu-1804-amd64-main-uyuni \
 ubuntu-1804-amd64-main-update-uyuni ubuntu-1804-amd64-main-security-uyuni \
 ubuntu-1804-amd64-universe-uyuni ubuntu-1804-amd64-uyuni-client
 ----
-endif::[]
-
 . Synchronize the new custom channels.
 
-You can should also consider creating a regular synchronization schedule.
+endif::[]
 
-You can check the progress of your synchronization from the command line with this command:
-+
-----
-tail -f /var/log/rhn/reposync.log /var/log/rhn/reposync/*
-----
 
-[WARNING]
+
+[NOTE]
 ====
-{ubuntu} OS channels can grow to be very large. Thus it can take several hours to complete mirroring.
+{ubuntu} channels can be very large.
+Synchronization can sometimes take several hours.
 ====
 
-.Procedure: Creating the bootstrap repository
 
-. To use bootstrap with {ubuntu}, you will need to create a bootstrap repository.
-You can do this from the command line with [command]``mgr-create-bootstrap-repo``:
+There are two ways to check if a channel has finished synchronizing:
+
+* In the {productname} {webui}, navigate to menu:Admin[Setup Wizard] and select the [guimenu]``SUSE Products`` tab.
 +
-----
-mgr-create-bootstrap-repo --with-custom-channels
-----
+This dialog displays a completion bar for each product when they are being synchronized.
+* Check the synchronization log file at the command prompt with [command]``tail -f /var/log/rhn/reposync/channel-label.log`` file.
++
+Each child channel will generate its own log during the synchronization progress.
+You will need to check all the base and child channel log files to be sure that the synchronization is complete.
 
-For more information on creating custom repositories, see xref:administration:channel-management.adoc[].
 
-.Procedure: Granting Root User Access
+
+== Root Access
 
 The root user on {ubuntu} is disabled by default.
 You can enable it by editing the [filename]``sudoers`` file.
+
+
+
+.Procedure: Granting Root User Access
 
 . On the client, edit the [filename]``sudoers`` file:
 +
@@ -161,5 +176,18 @@ sudo visudo
 Grant [command]``sudo`` access to the user by adding this line to the [filename]``sudoers`` file. Replace [systemitem]``<user>`` with the name of the user that will be used to bootstrap the client in the {webui}:
 +
 ----
-<user>   ALL=NOPASSWD: /usr/bin/python, /usr/bin/python2, /usr/bin/python3
+<user>  ALL=NOPASSWD: /usr/bin/python, /usr/bin/python2, /usr/bin/python3
 ----
+
+
+
+== Register Clients
+
+. To register your {ubuntu} clients, you will need a bootstrap repository.
+Create the bootstrap repository at the command prompt, with this command:
++
+----
+mgr-create-bootstrap-repo --with-custom-channels
+----
+
+For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
