--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -82,7 +82,7 @@ From the {webui}, add [systemitem]``RHEL7 Base x86_64`` and [systemitem]``SUSE L
 +
 From the command prompt, add [systemitem]``rhel-x86_64-server-7`` and [systemitem]``res7-suse-manager-tools-x86_64``.
 .  Synchronize the {productname} Server with the {SCC}.
-You can do this using the {webui}, or by running [command]``mgr-sync`` at the command prompt. to do it from CLI.
+You can do this using the {webui}, or by running [command]``mgr-sync`` at the command prompt.
 . Add the new channel to your activation key.
 
 
