--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -1,149 +1,151 @@
 [[kubernetes]]
 = Kubernetes
 
+You can use {productname} to manage {k8s} containerized clients in addition to regular traditional or Salt clients.
+
+{productname} manages {k8s} clusters with a virtual host manager.
+For more information on virtual host managers, see xref:client-configuration:virt-vmware.adoc[]
 
 
-[[at.k8s.integration.requires]]
-== Prerequisites
+To use {productname} with {k8s}, you will need to have your{productname} Server configured for container management, with all required channels present, and a registered container build host available.
 
-The prerequisites listed below should be met before proceeding.
+You will also require:
 
-* At least one Kubernetes or SUSE CaaS Platform cluster available on your network
-* {productname} configured for container management
-(required channels are present, a registered container build host available, etc.)
-* [package]#virtual-host-gatherer-Kubernetes# package installed on your {productname} server
-
-
-
-[[at.requirements]]
-== Requirements
-
-
-* Kubernetes version 1.5.0 or higher.
-Alternatively, you can use SUSE CaaS Platform
+* At least one {k8s} or {caasp} cluster available on your network.
+* The [systemitem]``virtual-host-gatherer-Kubernetes`` package installed on the {productname} Server.
+* {k8s} version 1.5.0 or higher, or {caasp}.
 * Docker version 1.12 or higher on the container build host
 
 
 
-[[at.registering.kubernetes.as.a.virtual.host.manager]]
-== Register Kubernetes as a Virtual Host Manager
+== Create a {k8s} Virtual Host Manager
 
+{k8s} clusters are registered with {productname} as a virtual host manager (VHM).
 
-_Kubernetes_ clusters are registered with SUSE Manager as ``virtual host managers``.
-Registration and authorization begins with importing a `kubeconfig` file using Kubernetes official command line tool ``kubectl``.
+You register and authorize your {k8s} cluster using a [path]``kubeconfig`` file with the {k8s} command line tool ``kubectl``.
 
-.Procedure: Registering a Kubernetes Cluster with {productname}
+.Procedure: Creating a {k8s} VHM
 . In the {productname} {webui}, navigate to menu:Systems[Virtual Host Managers].
-. In the [guimenu]``Create`` menu, select [guimenu]``Kubernetes Cluster``.
-. Enter a label for the new virtual host manager.
-. Select the `kubeconfig` file that contains the required data for the Kubernetes cluster.
-. Select the correct _context_ for the cluster, as specified in the kubeconfig file.
+. Click btn:[Create] and select [guimenu]``Kubernetes Cluster``.
+. In the [guimenu]``Add a Kubernetes Virtual Host Manager`` section, use these parameters:
+* In the [guimenu]``Label`` field, type a custom name for your VHM.
+* Select the [path]``kubeconfig`` file that contains the required data for the {k8s} cluster.
+. In the [guimenu]``context`` field, select the appropriate context for the cluister.
+This is specified in the [path]``kubeconfig`` file.
 . Click btn:[Create].
 
 
 
-[[at.view.the.list.of.nodes.in.a.cluster]]
-== View the List of Nodes in a Cluster
+.Procedure: Viewing the Nodes in a Cluster
+. In the {productname} {webui}, navigate to menu:Systems[Virtual Host Managers].
+. Select the {k8s} cluster.
+. Refresh the node data by clicking btn:[Schedule refresh data].
 
-. Select menu:Systems[Virtual Host Managers] from the navigation menu.
-. Select the Kubernetes cluster to view it.
-. Node data is not refreshed during registration.
-To refresh node data, click btn:[Schedule refresh data].
-. Refresh the browser.
-If the node data is not available wait a few moments, and try again.
+The node data can take a few moments to update.
+You might need to refresh your browser window to see the updated information.
 
-
-
-[[at.obtain.runtime.data.about.images]]
-== Obtain Runtime Data about Images
-
-
-See the following steps to find runtime data for images.
-
-. In the {productname} {webui}, navigate to menu:Images[Image List].
-. In the image list table, the runtime columns are labeled ``Revision``, ``Runtime``, and ``Instances``.
-In these columns find the following information:
-
-* ``Revision``: An artificial sequence number that increments on every rebuild for manager-built images or on every re-import for externally built images.
-* ``Runtime``: Overall status of the running instances of the image throughout the registered clusters.
-The status can be one of the following:
-** _All instances are consistent with SUSE Manager_: All the running instances are running the same build of the image as tracked by {productname}.
-** _Outdated instances found_: Some of the instances are running an older build of the image.
-A redeploy of the image into the pod may be required.
-** _No information_: The checksum of the instance image does not match the image data contained in {productname}.
-A redeploy of the image into the pod may be required.
-* ``Instances``: Number of instances running this image across all the clusters registered in {productname}.
-A breakdown of numbers can be seen by clicking the pop-up icon next to the number.
+[NOTE]
+====
+Node data is not refreshed during registration.
+You will need to manually refresh the data to see it.
+====
 
 
 
-[[at.build.an.image.for.deployment.in.kubernetes]]
-== Build an image for deployment in Kubernetes
+== Retrieve Image Runtime Data
 
+You can view runtime data about {k8s} images in the {productname} {webui}, by navigating to menu:Images[Image List].
 
-The following steps will help you build an image for deployment in Kubernetes.
+The image list table contains three columns:
 
-. Under menu:Images[Stores], create an image store.
-. In menu:Images[Profiles], create an image profile (with a dockerfile that is suitable to deploy to Kubernetes).
-. Under menu:Images[Build], build an image with the new profile and wait for the build to finish.
-. Deploy the image into one of the registered Kubernetes clusters using ``kubectl``.
-
-In the `Runtime` and `Instances` columns in the respective image row you can now see the updated data.
-
-
-
-[[at.import.a.previously.deployed.image.in.kubernetes]]
-== Import a Previously Deployed Image in Kubernetes
-
-
-The following steps will guide you through importing a previously deployed image in Kubernetes.
-
-. Select an image that has already been deployed to any of your registered Kubernetes clusters.
-. Add the registry owning the image to SUSE Manager as an image store.
-. Navigate to menu:Images[Image List], click `Import` from the top-right corner, fill in the form fields and click ``Import``.
-
-In the `Runtime` and `Instances` columns in the respective image row you can now see the updated data.
-
-
-
-[[at.obtain.additional.runtime.data]]
-== Obtain Additional Runtime Data
-
-
-The following steps will help you find additional runtime data.
-
-. Navigate to menu:Images[Image List], locate the row that contains the running instance, and click btn:[Details] on the right end.
-Under the `Overview` tab, notice the data in `Runtime` and `Instances` fields under the `Image Info` section.
-. Select the `Runtime` tab.
-. In the `Runtime` tab is a breakdown of the Kubernetes pods running this image in all the registered clusters including the following data:
+* [guimenu]``Revision``:
 +
+An artificial sequence number that increments on every rebuild for images built by {productanme}, or on every import for externally built images.
+* [guimenu]``Runtime``:
++
+Overall status of the running instances for each image in registered clusters.
+* [guimenu]``Instances``:
++
+Number of instances running this image across all the clusters registered in {productname}.
+You can see a breakdown of numbers by clicking the pop-up icon next to the number.
 
-** Pod name
-** Namespace which the pod resides in
-** The runtime status of the container in the specific pod.
+The [guimenu]``Runtime`` column displays one of these status messages:
+
+* ``All instances are consistent with SUSE Manager``:
++
+All the running instances are running the same build of the image as tracked by {productname}.
+* ``Outdated instances found``:
++
+Some of the instances are running an older build of the image.
+You might need to redeploy the image into the pod.
+* ``No information``:
++
+The checksum of the instance image does not match the image data contained in {productname}.
+You might need to redeploy the image into the pod.
 
 
 
-[[at.rebuild.a.previously.deployed.image.in.kubernetes]]
-== Rebuild a Previously Deployed Image in Kubernetes
+// This procedure needs help. LKB 2019-10-03
+.Procedure: Building an Image
+. In the {productname} {webui}, navigate to menu:Images[Stores].
+. Click btn:[Create] to create an image store.
+. Navigate to menu:Images[Profiles].
+. Click btn:[Create] to create an image profile.
+You will need to use a dockerfile that is suitable to deploy to {k8s}.
+. Navigate to menu:Images[Build] to build an image with the new profile.
+. Use the [command]``kubectl`` tool to deploy the image into one of the registered {k8s} clusters.
+
+The updated data should now be available in the image list at menu:Images[Image List].
 
 
-These steps will guide you through rebuilding an image that has been deployed to a Kubernetes cluster.
 
-. Go to menu:Images[Image List].
-Click the `Details` button on the right end of a row that has running instances.
-The image must be manager-built.
-. Click the `Rebuild` button located under the `Build Status` section and wait for the build to finish.
-. Notice the change in the `Runtime` icon and title, reflecting the fact that now the instances are running a previous build of the image.
+// This procedure needs help. LKB 2019-10-03
+.Procedure: Importing a Previously Deployed Image
+. In the {productname} {webui}, navigate to menu:Images[Image List], and select the existing image that you want to import.
+. Add the registry owning the image as an image store.
+. Navigate to menu:Images[Image List] and click btn:[Import].
+. Complete the fields and click btn:[Import].
+
+The updated data should now be available in the image list at menu:Images[Image List].
 
 
-[[at.role.based.access.control.permissions.and.certificate.data]]
-== Role Based Access Control Permissions and Certificate Data
+
+.Procedure: Rebuilding a Previously Deployed Image
+
+. In the {productname} {webui}, navigate to menu:Images[Image List], locate the row that contains the instance you want to rebuild, and click btn:[Details].
+. Navigate to the [guimenu]``Build Status`` section, and click btn:[Rebuild].
+
+The runtime status of the image should now be updated in the image list at menu:Images[Image List].
+This shows that the instances are running a previous build of the image.
+
+[NOTE]
+====
+You can only rebuild images if they were originally built with {productname}.
+You cannot rebuild imported images.
+====
+
+
+
+.Procedure: Retrieving Additional Runtime Data
+. In the {productname} {webui}, navigate to menu:Images[Image List], locate the row that contains the running instance, and click btn:[Details].
+. Navigate to the [guimenu]``Overview`` tab.
+In the [guimenu]``Image Info`` section, there is data in the [guimenu]``Runtime`` and [guimenu]``Instances`` fields.
+. Navigate to the [guimenu]``Runtime`` tab.
+This section contains a information about the {k8s} pods running this image in all the registered clusters.
+The information in this section includes:
++
+* Pod name.
+* Namespace which the pod resides in.
+* The runtime status of the container in the specific pod.
+
+
+
+== Permissions and Certificates
 
 
 [IMPORTANT]
 ====
-Currently, only kubeconfig files containing all embedded certificate data can be used with {productname}.
+You can only use [path]``kubeconfig`` files with {productname} if they contain all embedded certificate data.
 ====
 
 The API calls from {productname} are:
@@ -151,25 +153,21 @@ The API calls from {productname} are:
 * ``GET /api/v1/pods``
 * ``GET /api/v1/nodes``
 
-According to this list, the minimum recommended permissions for {productname} should be as follows:
+The minimum recommended permissions for {productname} are:
 
 * A ClusterRole to list all the nodes:
 +
-
 ----
 resources: ["nodes"]
 verbs: ["list"]
 ----
-
 * A ClusterRole to list pods in all namespaces (role binding must not restrict the namespace):
 +
-
 ----
 resources: ["pods"]
 verbs: ["list"]
 ----
 
-
-Due to a 403 response from ``/pods``, the entire cluster will be ignored by {productname}.
+If ``/pods`` returns a 403 reponse, the entire cluster will be ignored by {productname}.
 
 For more information on working with RBAC Authorization, see https://kubernetes.io/docs/admin/authorization/rbac/.
