--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -5,12 +5,9 @@ This is about PostgreSQL database migration.
 
 If you want to upgrade {productname} 3.2 to {productname} 4 you must check whether {productname} 3.2 is already based on PostgreSQL version 10.
 If you are already using PostreSQL 10, skip this section.
-If you are using an older version, such as version 9.6, you must migrate PostgreSQL to version 10 before you begin the database migration.
-For more information about migrating PostgreSQL 9.6 to version 10, see xref:db-migration.adoc#db-migration-prepare[].
-If you run PostgreSQL{nbsp}9.4 on {productname} 3.2, see the 3.2 product documentation: https://documentation.suse.com/external-tree/en-us/suma/3.2/susemanager-best-practices/html/book.suma.best.practices/bp.sp.migration.html#sp.migration.postgresql
-You cannot migrate directly from PostgreSQL{nbsp}9.4 to version 10.
+If you are using an older version, such as version 9.6, you must migrate PostgreSQL to version 10 before you begin the SUSE Manager migration.
 
-
+// I would not talk about postgresql 9.4 at all. It is so out of date, nobody should (and in fact can) still use it. The reference to "Prepare to Upgrade" looks superfluous to me; it follows immediately anyway.
 
 ////
 == Background Information
