--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -33,7 +33,7 @@ You cannot migrate directly from PostgreSQL{nbsp}9.4 to version 10.
 
 Before you begin the upgrade, prepare your existing 3.2 system and create a database backup.
 
-PostgreSQL stores data at [path]``/var/lib/pgsql/data/``, and logs to [path]``/var/lib/pgsql/data/pg_xlog/``.
+PostgreSQL stores data at [path]``/var/lib/pgsql/data/``.
 
 .Procedure: Preparing to Upgrade
 
