--- a/modules/client-configuration/pages/vhm.adoc
+++ b/modules/client-configuration/pages/vhm.adoc
@@ -6,11 +6,11 @@ Virtual Host Managers (VHMs) are used to gather information from a range of clie
 You can use a VHM to manage public cloud instances that are not directly supported by {productname}.
 You can also use a VHM to manage clusters created with {k8s} and {caasp}.
 
-//For more information on using a VHM with Microsoft Azure, see TBD.
-//For more information on using a VHM with Amazon Web Services, see TBD.
-//For more information on using a VHM with Google Compute Engine, see TBD.
+//For more information on using a VHM with Microsoft Azure, see xref:client-configuration:vhm-azure.adoc[].
+//For more information on using a VHM with Amazon Web Services, see xref:client-configuration:vhm-aws.adoc[].
+//For more information on using a VHM with Google Compute Engine, see xref:client-configuration:vhm-gce.adoc[].
 For more information on using a VHM with {k8s}, see xref:client-configuration:vhm-kubernetes.adoc[].
-//For more information on using a VHM with {caasp}, see xref:client-configuration:vhm-kubernetes.adoc[].
+//For more information on using a VHM with {caasp}, see xref:client-configuration:vhm-caasp.adoc[].
 
 
 
