--- a/modules/client-configuration/pages/autoyast.adoc
+++ b/modules/client-configuration/pages/autoyast.adoc
@@ -77,6 +77,6 @@ Upload the {ay} profile to the {productname} Server using the {productname} {web
 
 When the {ay} profile has been created, use the URL from the menu:Autoinstallation Overview[] page as the image location.
 
-For more information about PXE boot, see https://www.suse.com/documentation/sles-15/singlehtml/book_sle_deployment/book_sle_deployment.html#cha.deployment.prep_pxe.
+For more information about PXE boot, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-deployment-prep-pxe.html
 
 For more information about autoinstallation profiles, see xref:reference:systems/autoinst-profiles.adoc[].
