--- a/modules/client-configuration/pages/disconnected-setup.adoc
+++ b/modules/client-configuration/pages/disconnected-setup.adoc
@@ -16,9 +16,9 @@ This setup allows your {productname} installation to remain in an offline, disco
 ====
 Your RMT or SMT instance must be used to managed a {productname} Server directly.
 It cannot be used to manage a second RMT or SMT instance, in a cascade.
-==== 
+====
 
-For more information on RMT, see https://www.suse.com/documentation/sles-15/book_rmt/data/book_rmt.html.
+For more information on RMT, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/book-rmt.html.
 
 
 == Synchronize RMT
@@ -39,7 +39,7 @@ zypper in rmt-server
 yast2 rmt
 ----
 . Follow the prompts to complete installation.
-For more information on setting up RMT, see https://www.suse.com/documentation/sles-15/book_rmt/data/book_rmt.html.
+For more information on setting up RMT, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/book-rmt.html.
 
 .Procedure: Synchronizing RMT with SCC
 . On the RMT instance, list all available products and repositories for your organization:
@@ -86,7 +86,7 @@ SMT is included with {sle} 12, and can be used to manage clients running {sle} 1
 
 SMT requires you to create a local mirror directory on the SMT instance in order to synchronize repositories and packages.
 
-For more details on installing and configuring SMT, see https://www.suse.com/documentation/sles-12/book_smt/data/book_smt.html.
+For more details on installing and configuring SMT, see https://documentation.suse.com/sles/12-SP4/html/SLES-all/book-smt.html.
 
 .Procedure: Synchronizing SMT with SCC
 . On the SMT instance, create a database replacement file:
