--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -14,7 +14,7 @@ This section also includes information about administering your virtual guests a
 
 The way that you set up Xen or KVM on a VM host depends on what operating system you want to use on its associated guests.
 
-For {suse} operating systems, see the {slsa} Virtualization Guide available from https://www.suse.com/documentation/sles-15/book_virt/data/book_virt.html.
+For {suse} operating systems, see the {slsa} Virtualization Guide available from https://documentation.suse.com/sles/15-SP1/html/SLES-all/book-virt.html.
 
 For {rhel} operating systems, refer to the Red Hat documentation for your version.
 
