--- a/modules/installation/pages/install-ibmz.adoc
+++ b/modules/installation/pages/install-ibmz.adoc
@@ -92,7 +92,7 @@ This section covers the installation of {productname}{nbsp}{productnumber} as an
 
 // TBD: Is this correct? SUSE Manager as an extension? Doesn't SLES15SP1 on z also have the new module concept with SUSE Manager being a base product?
 
-For more information on deploying SLES {sles-version}{nbsp}{sp-version} on your hardware, see https://www.suse.com/documentation/sles-15/book_sle_deployment/data/cha_zseries.html.
+For more information on deploying SLES {sles-version}{nbsp}{sp-version} on your hardware, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-zseries.html.
 
 . Install {sls}{nbsp}{sles-version}{nbsp}{sp-version} from the installation media, and select {productname} as an extension.
 . If you have not already done so, set up any additional storage required for [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` and swap space using the {yast} partitioner tool.
