--- a/modules/installation/pages/install-server.adoc
+++ b/modules/installation/pages/install-server.adoc
@@ -59,7 +59,7 @@ Select btn:[Finish] to begin the installation.
 
 
 Installation of {sls} will begin.
-For more information on completing an installation of {sls}, see: https://www.suse.com/documentation/sles-12/book_quickstarts/data/sec_sle_installquick.html[SUSE Linux Enterprise Installation Quickstart].
+For more information on completing an installation of {sls}, see: https://documentation.suse.com/sles/15-SP1/html/SLES-all/art-sle-installquick.html.
 
 [[quickstart3.sec.suma.installation.sles.sumaext]]
 == Selecting the {productname} Extension
