--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -44,7 +44,7 @@ Find the JeOS image at https://download.suse.com/.
 .{sle} Virtualization Guide
 [NOTE]
 ====
-For more information on virtualization, see https://www.suse.com/documentation/sles-15/singlehtml/book_virt/book_virt.html[SUSE Linux Enterprise Virtualization Guide].
+For more information on virtualization, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/book-virt.html.
 ====
 
 
