--- a/modules/retail/pages/retail-introduction.adoc
+++ b/modules/retail/pages/retail-introduction.adoc
@@ -28,7 +28,7 @@ Migrating configuration from {slepos} to {smr} is a technology preview and will 
 == About this book
 
 This document provides an overview of {smr}, and guides you through initial installation and setup.
-It should be read in conjunction with the {susemgr} documentation suite, available from https://www.suse.com/documentation/suse-manager.
+It should be read in conjunction with the {susemgr} documentation suite, available from https://documentation.suse.com/suma/4.0/.
 
 For more information about managing your {smr} environment, or to find out where to get help, see xref:retail:retail-next.adoc[].
 
